--- a/FairytellerUtilities/pom.xml
+++ b/FairytellerUtilities/pom.xml
@@ -18,5 +18,12 @@
 		</plugins>
 	</build>
 	<dependencies>
+		<dependency>
+			<groupId>com.fairyteller</groupId>
+			<artifactId>FairytellerSwing</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
